--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LaconicLuna</title>
-    <link rel="stylesheet" href="style.css">
+    <title>LaconicLuna.com</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-	<script src="index.js"></script>
+    <header>
+      <h1 id="title" onclick="document.location='index.html'">LaconicLuna.com</h1>
+    </header>
+    <div id="body">
+      <p>TESTING</p>
+      <p>TESTING</p>
+      <p>TESTING</p>
+      <p>TESTING</p>
+      <p>TESTING</p>
+      <p>TESTING</p>
+    </div>
+    <div id="footer">
+      <p>Last updated 1/31/2023</p>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
