--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
-      <h1 id="title" onclick="document.location='index.html'">LaconicLuna.com</h1>
-    </header>
-    <div id="body">
-      <p>TESTING</p>
-      <p>TESTING</p>
-      <p>TESTING</p>
-      <p>TESTING</p>
-      <p>TESTING</p>
-      <p>TESTING</p>
-    </div>
+    <img src="luna.png"></img>
     <div id="footer">
       <p>Last updated 1/31/2023</p>
     </div>
