--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LaconicLuna.com</title>
+    <style>
+      #wrapper, img{
+        width:100%;
+        height: 100%;
+      }
+    </style>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <img src="luna.png"></img>
+    <div id="wrapper">
+      <img src="luna.png">
+    </div>
     <div id="footer">
       <p>Last updated 2/12/2024</p>
     </div>
