--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LaconicLuna.com</title>
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1166075199284854814/1206370656552484875/20240202_003132.png?ex=65dbc339&is=65c94e39&hm=1e0213c08156b4d4ac53e73f0997e7d51b6f6ff276abfbb6300d10d0426d36d8&" />
     <style>
       #wrapper, img{
         width:100%;
