--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       }
       p{
         color:white;
+        font-family: Nunito; 
       }
     </style>
     <link href="style.css" rel="stylesheet" type="text/css" />
