--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="wrapper">
-      <img src="luna.png">
-    </div>
+    <h1>UNDER MAINTENANCE</h1>
     <div id="footer">
       <p>Last updated 2/12/2024</p>
     </div>
