--- a/index.html
+++ b/index.html
@@ -5,26 +5,178 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LaconicLuna.com</title>
-    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1166075199284854814/1206370656552484875/20240202_003132.png?ex=65dbc339&is=65c94e39&hm=1e0213c08156b4d4ac53e73f0997e7d51b6f6ff276abfbb6300d10d0426d36d8&" />
+    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1166075199284854814/1210110914414518343/002594e4352fad7d95dec9cf2cb4c152.jpg?ex=65e95e9c&is=65d6e99c&hm=06fa40df9ec129912d181c733c18e67a303b7fcdf971629f52a7e886085b3609&=&format=webp&width=295&height=295" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito">
     <style>
       body{
-        background-color:rgb(33,37,41)
-      }
-      #wrapper, img{
-        width:100%;
-        height: 100%;
-      }
-      p{
-        color:white;
+        background-color:rgb(33,37,41);
+        color: white;
         font-family: Nunito; 
+      }
+      .best{
+        color:hotpink;
+      }
+      .bad{
+        color:red;
+      }
+      .good{
+        color:lightblue;
+      }
+      .close{
+        color:orange;
+      }
+      th{
+        padding-right: 30px;
+
+      }
+      h1 {
+
+        background: linear-gradient(90deg, rgba(244,143,177,1) 0%, rgba(91,206,250,1) 25%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+      table, th, td {
+        border: 1px solid white;
+        border-collapse: collapse;
+      }
+      th{
+        background-color: white;
+        color:black;
+      }
+
+      #legend tr td{
+        border:none;
+      }
+      #legend{
+        border:none;
       }
     </style>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>UNDER MAINTENANCE</h1>
+    <h1>LaconicLuna</h1>
+    <h3>Luna (she/they) </h3>
+    <h4>Not your average math major. More likely to be found with Lego than textbooks, and fluent in python as well as Chinese. Beware of philosophical rants and unsolicited gaming advice.</h4>
+    <table cellspacing="0">
+      <thead>
+        <tr>
+          <th>Names</th>
+          <th>Pronouns</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="best">♥ Luna</td>
+          <td class="best">♥ she/her</td>
+        </tr>
+        <tr>
+          <td class="best">♥ 司马懿</td>
+          <td class="best">♥ they/them</td>
+        </tr>
+        <tr>
+          <td class="good">☺nuk</td>
+          <td class="best">♥ fae/faer</td>
+        </tr>
+        <tr>
+          <td class="bad">X ᵈᵉᵃᵈⁿᵃᵐᵉ</td>
+          <td class="bad">X he/him</td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <table cellspacing="0">
+      <caption>Words</caption>
+      <thead>
+        <th>Honorifics</th>
+        <th>Compliments</th>
+        <th>Person Desc.</th>
+        <th>Relationship Desc.</th>
+      </thead>
+      <tr>
+        <td class="best">♥ ms.</td>
+        <td class="best">♥ cute</td>
+        <td class="best">♥ girl</td>
+        <td class="best">♥ friend</td>
+      </tr>
+      <tr>
+        <td class="best">♥ mx.</td>
+        <td class="best">♥ nerd</td>
+        <td class="best">♥ enby</td>
+        <td class="close">&#9892 partner</td>
+      </tr>
+      <tr>
+        <td class="best">♥ ma'am</td>
+        <td class="good">☺pretty</td>
+        <td class="best">♥ woman</td>
+        <td class="close">&#9892 girlfriend</td>
+      </tr>
+      <tr>
+        <td class="best">♥ madam</td>
+        <td class="close">&#9892 hot</td>
+        <td class="best">♥ lady</td>
+        <td class="close">&#9892 enbyfriend</td>
+      </tr>
+      <tr>
+        <td class="bad">X mr.</td>
+        <td class="close">&#9892 sexy</td>
+        <td class="good">☺person</td>
+        <td class="bad">X boyfriend</td>
+      </tr>
+      <tr>
+        <td class="bad">X sir</td>
+        <td class="bad">X handsome</td>
+        <td class="good">☺friend</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="good">☺sister</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="good">☺dudette</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="good">☺bro</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="bad">X man</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="bad">X boy</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td class="bad">X dude</td>
+        <td></td>
+      </tr>
+
+    </table>
+    <br><br>
+    <table id="legend">
+      <tr>
+      <td class="best">♥ = Best&nbsp&nbsp</td>
+      <td class="good">☺ = Great&nbsp&nbsp</td>
+      <td class="close">&#9892 = Only if in Relationship&nbsp&nbsp</td>
+      <td class="bad">X = Bad (Never use for me)</td>
+      </tr>
+    </table>
     <div id="footer">
-      <p>Last updated 2/12/2024</p>
+      <p>Last updated 2/21/2024</p>
     </div>
     <script src="script.js"></script>
   </body>
