--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
       </thead>
       <tbody>
         <tr>
-          <td class="best">♥ Luna</td>
-          <td class="best">♥ she/her</td>
+          <td class="best">&#x2665;&#xFE0E; Luna</td>
+          <td class="best">&#x2665;&#xFE0E; she/her</td>
         </tr>
         <tr>
-          <td class="best">♥ 司马懿</td>
-          <td class="best">♥ they/them</td>
+          <td class="best">&#x2665;&#xFE0E; 司马懿</td>
+          <td class="best">&#x2665;&#xFE0E; they/them</td>
         </tr>
         <tr>
           <td class="good">☺nuk</td>
-          <td class="best">♥ fae/faer</td>
+          <td class="best">&#x2665;&#xFE0E; fae/faer</td>
         </tr>
         <tr>
           <td class="bad">X ᵈᵉᵃᵈⁿᵃᵐᵉ</td>
@@ -93,27 +93,27 @@
         <th>Relationship Desc.</th>
       </thead>
       <tr>
-        <td class="best">♥ ms.</td>
-        <td class="best">♥ cute</td>
-        <td class="best">♥ girl</td>
-        <td class="best">♥ friend</td>
+        <td class="best">&#x2665;&#xFE0E; ms.</td>
+        <td class="best">&#x2665;&#xFE0E; cute</td>
+        <td class="best">&#x2665;&#xFE0E; girl</td>
+        <td class="best">&#x2665;&#xFE0E; friend</td>
       </tr>
       <tr>
-        <td class="best">♥ mx.</td>
-        <td class="best">♥ nerd</td>
-        <td class="best">♥ enby</td>
+        <td class="best">&#x2665;&#xFE0E; mx.</td>
+        <td class="best">&#x2665;&#xFE0E; nerd</td>
+        <td class="best">&#x2665;&#xFE0E; enby</td>
         <td class="close">&#9892 partner</td>
       </tr>
       <tr>
-        <td class="best">♥ ma'am</td>
+        <td class="best">&#x2665;&#xFE0E; ma'am</td>
         <td class="good">☺pretty</td>
-        <td class="best">♥ woman</td>
+        <td class="best">&#x2665;&#xFE0E; woman</td>
         <td class="close">&#9892 girlfriend</td>
       </tr>
       <tr>
-        <td class="best">♥ madam</td>
+        <td class="best">&#x2665;&#xFE0E; madam</td>
         <td class="close">&#9892 hot</td>
-        <td class="best">♥ lady</td>
+        <td class="best">&#x2665;&#xFE0E; lady</td>
         <td class="close">&#9892 enbyfriend</td>
       </tr>
       <tr>
@@ -169,7 +169,7 @@
     <br><br>
     <table id="legend">
       <tr>
-      <td class="best">♥ = Best&nbsp&nbsp</td>
+      <td class="best">&#x2665;&#xFE0E; = Best&nbsp&nbsp</td>
       <td class="good">☺ = Great&nbsp&nbsp</td>
       <td class="close">&#9892 = Only if in Relationship&nbsp&nbsp</td>
       <td class="bad">X = Bad (Never use for me)</td>
