--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <title>Contact Me</title>
+    <link rel="icon" type="image/png" href="images/user.png">
+
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/stylesheet.css">
-    <title>LaconicLuna</title>
-    <link rel="icon" type="image/png" href="images/user.png">
 </head>
 
-<body data-new-gr-c-s-check-loaded="14.1059.0" data-gr-ext-installed="" class="" data-new-gr-c-s-loaded="14.1059.0">
+  <body>
 
     <!-- Static navbar -->
     <div class="navbar navbar-inverse navbar-static-top">
@@ -45,34 +52,46 @@
             <!--/.nav-collapse -->
         </div>
     </div>
-
-    <!-- +++++ Welcome Section +++++ -->
-    <div id="ww">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 centered">
-                    <img src="images/user.png" width="128" height="128" alt="Luna">
-                    <h1>Hi, I am Luna!</h1>
-                    <p>You are probably here for <a href="about.html">ABOUT ME</a><br> Please consider taking a look at <a href="blog.html">"my blog"</a>. idk what else to call it</p>
-                    <p></p>
-                </div>
-                <!-- /col-lg-8 -->
-            </div>
-            <!-- /row -->
-        </div>
-        <!-- /container -->
-    </div>
-    <!-- /ww -->
-
-
-    <!-- +++++ Projects Section +++++ -->
-
-    <!-- /container -->
-
-
-    <!-- +++++ Footer Section +++++ -->
-
-    <div id="footer">
+	
+	
+	<!-- +++++ Contact Section +++++ -->
+	
+	<div class="container pt">
+		<div class="row mt">
+			<div class="col-lg-6 col-lg-offset-3 centered">
+				<h3>CONTACT ME</h3>
+				<hr>
+				<p>CURRENTLY DOESNT DO ANYTHING!</p>
+				<p>contact me through one of my links at bottom of page</p>
+			</div>
+		</div>
+		<div class="row mt">	
+			<div class="col-lg-8 col-lg-offset-2">
+				<form role="form">
+				  <div class="form-group">
+				    <input type="name" class="form-control" id="NameInputEmail1" placeholder="Your Name">
+				    <br>
+				  </div>
+				  <div class="form-group">
+				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+				    <br>
+				  </div>
+				  <div class="form-group">
+				    <input type="name" class="form-control" id="subjectEmail1" placeholder="Subject">
+				    <br>
+				  </div>
+				  <textarea class="form-control" rows="6" placeholder="Enter your text here"></textarea>
+				    <br>
+				  <button id="contactbutton" type="submit" class="btn btn-success">SUBMIT</button>
+				</form>    			
+			</div>
+		</div><!-- /row -->
+	</div><!-- /container -->
+	
+	
+	<!-- +++++ Footer Section +++++ -->
+	
+	<div id="footer">
         <div class="container">
             <div class="row">
                 <!-- /col-lg-4 -->
@@ -92,10 +111,9 @@
             </div>
         </div>
     </div>
-
-<script src="js/jquery.js"></script>
+	
+  <script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
-<script id="main-script" src="js/index-scripts.js"></script>
+<script id="main-script" src="js/contact-scripts.js"></script>
 </body>
-
 </html>
