--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 		<div class="row mt centered">	
 			<div class="col-lg-3">
 				<span class="fa fa-gamepad"></span>
-				<p>Some of my favorite games are Tears of the Kingdom, Celeste, and Minecraft.<br>MC server: play.laconicluna.com</p>
+				<p>Some of my favorite games are Tears of the Kingdom, Celeste, and Minecraft.</p>
 			</div>
 			
 			<div class="col-lg-3">
