--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 			
 			<div class="col-lg-3">
 				<span class="fa fa-music"></span>
-				<p>I love music. My favorite artists are Eminem, Faith Marie, and NF.<br>Favorite Song: Love The Way You Lie</p>
+				<p>I love music. My favorite artists are Eminem, Faith Marie, and NF.<br>Favorite Song: Beautiful pain by eminem</p>
 			</div>
 
 			<div class="col-lg-3">
@@ -101,10 +101,7 @@
 				<p>Been coding a while. Experienced with Java, Python, and C/C++</p>
 			</div>
 
-			<div class="col-lg-3">
-				<span class="fa fa-heart"></span>
-				<p>I'm transfeminine non-binary🏳️‍⚧️</p>
-			</div>
+			
 		</div>
 		
 		
