--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 centered">
-			<h1>!UNDER CONSTRUCTION!</h1>
+			<h1>⚠︎ UNDER CONSTRUCTION ⚠︎</h1>
                     <img src="images/user.png" width="128" height="128" alt="Luna">
                     <h1>Hi, I am Luna!</h1>
                     <p>You are probably here for <a href="about.html">ABOUT ME</a><br> Please consider taking a look at <a href="blog.html">"my blog"</a>. idk what else to call it</p>
