--- a/LaconicLuna-main/index.html
+++ b/LaconicLuna-main/index.html
@@ -30,11 +30,11 @@
                 <div class="col-lg-8 col-lg-offset-2 centered">
                     <img src="images/user.png" width="128" height="128" alt="Luna">
                     <h1>Hi, I am Luna!</h1>
-                    <p>You are probably here for <a href="about.html">ABOUT ME</a><br> Please consider taking a look at <a href="blog.html">"my blog"</a>. idk what else to call it</p>
+                    <p>You are probably here for <a href="about.html">ABOUT ME</a><br> e best number :)</p>
                     <p>$$e^x=\displaystyle\sum_{i=1}^\infty \frac{x^n}{n!}$$</p>
                     <p>$$\begin{bmatrix}
-                        \pi & \mathbb{RCQNZ} \\
-                        c & d
+                        \pi & e\ \\
+                        \phi & \sqrt{2}
                      \end{bmatrix}
                      $$</p>
                     <p></p>
