--- a/LaconicLuna-main/about.html
+++ b/LaconicLuna-main/about.html
@@ -53,21 +53,23 @@
 				<span class="fa fa-gamepad"></span>
 				<p>Some of my favorite games are Tears of the Kingdom, Celeste, and Minecraft.</p>
 			</div>
-			
+			<div class="col-lg-3">
+				<span class="fa fa-fish"></span>
+				<p>I really like fishing in my free time. I just love how funny fish are!</p>
+			</div>
+
 			<div class="col-lg-3">
 				<span class="fa fa-music"></span>
-				<p>I love music. My favorite artists are Eminem, Faith Marie, and NF.<br>Favorite Song: Beautiful pain by eminem</p>
+				<p>I love music. My favorite artists are Eminem, Faith Marie, and NF.<br>Favorite Song: Beautiful pain by Eminem</p>
+			</div>
+			<div class="col-lg-3">
+				<span class="fa fa-superscript"></span>
+				<p>Math is my real passion in life. I love learning new math that hurts your brain :)</p>
 			</div>
 
-			<div class="col-lg-3">
-				<span class="fa fa-book"></span>
-				<p>I love reading and I'm a big philosophy nerd.<br>Favorite Book: 道德经(dao de jing)</p>
-			</div>
+			
 
-			<div class="col-lg-3">
-				<span class="fa fa-globe"></span>
-				<p>Fluent in English and Chinese. I hope to visit China someday.</p>
-			</div>
+			
 			
 			
 		</div><!-- /row -->
@@ -77,8 +79,19 @@
 				<span class="fa fa-code"></span>
 				<p>Been coding a while. Experienced with Java, Python, and C/C++</p>
 			</div>
+			<div class="col-lg-3">
+				<span class="fa fa-paint-brush"></span>
+				<p>I like making pixel art and comics. I don't do it much these days sadly</p>
+			</div>
 
-			
+			<div class="col-lg-3">
+				<span class="fa fa-globe"></span>
+				<p>Fluent in English and Chinese. I hope to visit China someday.</p>
+			</div>
+			<div class="col-lg-3">
+				<span class="fa fa-book"></span>
+				<p>I love reading and I'm a philosophy nerd.<br>Favorite Book: 道德经</p>
+			</div>
 		</div>
 		
 		
