--- a/LaconicLuna-main/about.html
+++ b/LaconicLuna-main/about.html
@@ -54,7 +54,7 @@
 				<p>Some of my favorite games are Tears of the Kingdom, Celeste, and Minecraft.</p>
 			</div>
 			<div class="col-lg-3">
-				<span class="fa fa-fish"></span>
+				<span class="fa fa-water"></span>
 				<p>I really like fishing in my free time. I just love how funny fish are!</p>
 			</div>
 
