--- a/LaconicLuna-main/index.html
+++ b/LaconicLuna-main/index.html
@@ -30,6 +30,8 @@
                 <div class="col-lg-8 col-lg-offset-2 centered">
                     <img src="images/user.png" width="128" height="128" alt="Luna">
                     <h1>Hi, I am Luna!</h1>
+			<p>Welcome to my personal website!</p>
+			
                     <p>You are probably here for <a href="about.html">ABOUT ME</a><br> e best number :)</p>
                     <p>$$e^x=\displaystyle\sum_{i=1}^\infty \frac{x^n}{n!}$$</p>
                     <p>$$\begin{bmatrix}
@@ -49,6 +51,20 @@
 
 
     <!-- +++++ Projects Section +++++ -->
+	<div class="container">
+    <div class="row mt centered">
+        <h2>My Projects</h2>
+        
+        <div class="col-lg-4">
+            <h3>The Lukewarm Life of Luna</h3>
+            <p>A humorous and relatable comic series about a college student who is clueless about their dark past...<a href="index.html">Learn more</a></p>
+        </div>
+	<div class="col-lg-4">
+            <h3>The only escape is forgetting</h3>
+            <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with school and their mental health.<a href="index.html">Learn more</a></p>
+        </div>
+    </div>
+</div>
 
     <!-- /container -->
     <div w3-include-html="templates/footer.html"></div>
