--- a/LaconicLuna-main/index.html
+++ b/LaconicLuna-main/index.html
@@ -56,11 +56,11 @@
         <h2>My Projects</h2>
         
         <div class="col-lg-4">
-            <h3>The Lukewarm Life of Luna</h3>
-            <p>A humorous and relatable comic series about a college student who is clueless about their dark past...<a href="index.html">Learn more</a></p>
+            <h3>The Lukewarm Life of Luna (Ongoing)</h3>
+            <p>A humorous and relatable comic series about a college student who is clueless about their dark past.<br>Secret: It's a sort of prequel-sequel to my next project<a href="index.html">Learn more</a></p>
         </div>
 	<div class="col-lg-4">
-            <h3>The only escape is forgetting</h3>
+            <h3>The Only Escape is Forgetting (Very early in development)</h3>
             <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with school and their mental health.<a href="index.html">Learn more</a></p>
         </div>
     </div>
