--- a/LaconicLuna-main/index.html
+++ b/LaconicLuna-main/index.html
@@ -57,13 +57,11 @@
         
         <div class="col-lg-4">
             <h3>The Lukewarm Life of Luna (Ongoing)</h3>
-            <p>A humorous and relatable comic series about a college student who is clueless about their dark past.<br>Secret: It's a sort of "parallelquel" to my next project.
-		    <a href="index.html">Learn more</a></p>
+            <p>A humorous and relatable comic series about a college student who is clueless about their dark past.<br>Secret: It's a sort of "parallelquel" to my next project.<br><a href="index.html">Learn more</a></p>
         </div>
 	<div class="col-lg-4">
             <h3>The Only Escape is Forgetting (Very early in development)</h3>
-            <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with school and their mental health.
-		    <a href="index.html">Learn more</a></p>
+            <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with school and their mental health.<br><a href="index.html">Learn more</a></p>
         </div>
     </div>
 </div>
