--- a/LaconicLuna-main/lwlol.html
+++ b/LaconicLuna-main/lwlol.html
@@ -56,7 +56,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><bd>April 16, 2024</bd></p>
-					<h4>The Lukewarm Life of Luna #2</h4>
+					<h4>The Lukewarm Life of Luna #2: *dead inside*</h4>
 					<p><img class="img-responsive" src="https://pbs.twimg.com/media/GLVRv7aaQAA9ENs?format=jpg&name=large" alt="Comic #2" ></p>
 				</div>
 
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><bd>April 24, 2024</bd></p>
-					<h4>The Lukewarm Life of Luna #3</h4>
+					<h4>The Lukewarm Life of Luna #3: what?</h4>
 					<p><img class="img-responsive" src="https://pbs.twimg.com/media/GL_EFkAboAAgzuf?format=jpg&name=large" alt="Comic #3" ></p>
 				</div>
 
