--- a/LaconicLuna-main/index.html
+++ b/LaconicLuna-main/index.html
@@ -57,11 +57,11 @@
         
         <div class="col-lg-4">
             <h3>The Lukewarm Life of Luna (Ongoing)</h3>
-            <p>A humorous and relatable comic series about a college student who is clueless about their dark past.<br><a href="lwlol.html">Learn more</a></p>
+            <p>A humorous and relatable comic series about a college student who is clueless about their dark past.<br><a href="lwlol.html">Read it here</a></p>
         </div>
 	<div class="col-lg-4">
             <h3>The Only Escape is Forgetting (Very early in development)</h3>
-            <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with their mental health.<br>"Parellelquel" to The Lukewarm Life of Luna<br><a href="index.html">Learn more</a></p>
+            <p>It's a psychological horror top-down RPG I am currently developing.<br>You play as a college student who struggling with their mental health.<br>"Parellelquel" to The Lukewarm Life of Luna</a></p>
         </div>
     </div>
 </div>
