--- a/LaconicLuna-main/lwlol.html
+++ b/LaconicLuna-main/lwlol.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog</title>
+    <title>LWLOL</title>
     <link rel="icon" type="image/png" href="images/user.png">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
