--- a/LaconicLuna-main/art.html
+++ b/LaconicLuna-main/art.html
@@ -38,6 +38,7 @@
 			</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /ww -->
+<center>
   <div id="white">
 	    <div class="container">
 			<div class="row">
@@ -80,7 +81,7 @@
 			</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /grey -->
-	
+	</center>
 	
 	
 	<!-- +++++ Footer Section +++++ -->
