--- a/LaconicLuna-main/about.html
+++ b/LaconicLuna-main/about.html
@@ -51,7 +51,7 @@
 		<div class="row mt centered">	
 			<div class="col-lg-3">
 				<span class="fa fa-gamepad"></span>
-				<p>Some of my favorite games are Tears of the Kingdom, Celeste, and Minecraft.</p>
+				<p>I really like Minecraft, celeste and skyrim but my favorite game by far is Red Dead Redemption 2</p>
 			</div>
 			<div class="col-lg-3">
 				<span class="fa fa-anchor"></span>
