--- a/LaconicLuna-main/about.html
+++ b/LaconicLuna-main/about.html
@@ -81,7 +81,7 @@
 			</div>
 			<div class="col-lg-3">
 				<span class="fa fa-paint-brush"></span>
-				<p>I like making pixel art and comics. I don't do it much these days sadly</p>
+				<p>I like making pixel art and comics. I also compose music, EDM or just classical. I don't do it much these days sadly</p>
 			</div>
 
 			<div class="col-lg-3">
