--- a/LaconicLuna-main/about.html
+++ b/LaconicLuna-main/about.html
@@ -37,7 +37,7 @@
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="images/user.png" width=256 height=256 alt="Luna">
 					<h1>About Luna!</h1>
-					<p>(she/they)<br>I'm Luna, not your average mathmetician. I'm more likely to be found with Lego than textbooks, fluent in python as well as Chinese. Beware of philosophical rants and unsolicited gaming advice.</p>
+					<p>(she/they)<br>I'm Luna, not your average mathematician. I'm more likely to be found with Lego than textbooks, fluent in python as well as Chinese. Beware of philosophical rants and unsolicited gaming advice.</p>
 
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
